# cpp-test-repo

./: .clang-format  .gitignore  CMakeLists.txt
deploy/: Dockerfile  docker-compose.yaml
src/: calculator.cpp  calculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
